--- a/index.html
+++ b/index.html
@@ -541,9 +541,9 @@
 				</div>
 			</div>
 			<div class="training__content">
-				<div class="training__table">
-					<div class="training__item">
-						<div class="training__content-heading training__accordion-header">
+				<ul class="training__table">
+					<li class="training__item js-accordion-item">
+						<div class="training__content-heading training__accordion-header js-accordion-header">
 							<div class="training__content-heading-text">
 								<h5>Первоначальная подготовка</h5>
 								<p>Базовая подготовка контрактников МО РФ</p>
@@ -555,9 +555,9 @@
 								действия в городской застройке и окопах. Практика проводится в условиях, приближенных к реальным, с
 								отработкой индивидуальных и групповых навыков.</p>
 						</div>
-					</div>
-					<div class="training__item">
-						<div class="training__content-heading training__accordion-header">
+					</li>
+					<li class="training__item js-accordion-item">
+						<div class="training__content-heading training__accordion-header js-accordion-header">
 							<div class="training__content-heading-text">
 								<h5>Топография и ориентирование</h5>
 								<p>Ориентирование на местности</p>
@@ -569,9 +569,9 @@
 								использованию электронных навигационных средств. На практике отрабатываются навыки ориентирования на
 								местности, прокладка маршрутов и навигация в различных условиях.</p>
 						</div>
-					</div>
-					<div class="training__item">
-						<div class="training__content-heading training__accordion-header">
+					</li>
+					<li class="training__item js-accordion-item">
+						<div class="training__content-heading training__accordion-header js-accordion-header">
 							<div class="training__content-heading-text">
 								<h5>Тактическая подготовка</h5>
 								<p>Огневая и стрелковая подготовка</p>
@@ -583,9 +583,9 @@
 								правила приведения его к нормальному бою. Под контролем инструкторов отрабатываются навыки меткой
 								стрельбы, правильные положения и тактические приемы обращения с оружием.</p>
 						</div>
-					</div>
-					<div class="training__item">
-						<div class="training__content-heading training__accordion-header">
+					</li>
+					<li class="training__item js-accordion-item">
+						<div class="training__content-heading training__accordion-header js-accordion-header">
 							<div class="training__content-heading-text">
 								<h5>Тактическая медицина</h5>
 								<p>Само- и взаимопомощь в боевых условиях</p>
@@ -597,9 +597,9 @@
 								Отрабатываются действия при кровотечениях, осколочных, пулевых и минно-взрывных травмах, а также навыки
 								эвакуации раненых в полевых условиях.</p>
 						</div>
-					</div>
-					<div class="training__item">
-						<div class="training__content-heading training__accordion-header">
+					</li>
+					<li class="training__item js-accordion-item">
+						<div class="training__content-heading training__accordion-header js-accordion-header">
 							<div class="training__content-heading-text">
 								<h5>Основы БПЛА</h5>
 								<p>Работа и противодействие беспилотникам</p>
@@ -611,8 +611,8 @@
 								и
 								способов противодействия беспилотным летательным аппаратам в современных условиях.</p>
 						</div>
-					</div>
-				</div>
+					</li>
+				</ul>
 				<div class="training__footer">
 					<div class="training__content-heading">
 						<h6>Также по желанию военнослужащего представляется возможность обучиться на
@@ -633,8 +633,8 @@
 			</div>
 			<div class="faq__content">
 				<ul>
-					<li class="is-open">
-						<div class="faq__item-header">
+					<li class="is-open js-accordion-item">
+						<div class="faq__item-header js-accordion-header">
 							<h6>Я гражданин Российской Федерации, хочу поступить на военную службу по
 								контракту. Куда обратиться?</h6>
 							<img src="./image/faq/accordeon-arrow.svg" alt="" class="faq__arrow">
@@ -643,37 +643,37 @@
 							электронных навигационных средств. На практике отрабатываются навыки ориентирования на местности,
 							прокладка маршрутов и навигация в различных условиях.</p>
 					</li>
-					<li>
-						<div class="faq__item-header">
+					<li class="js-accordion-item">
+						<div class="faq__item-header js-accordion-header">
 							<h6>На какой срок заключается контракт с Министерством обороны Российской
 								Федерации?</h6>
 							<img src="./image/faq/accordeon-arrow.svg" alt="" class="faq__arrow">
 						</div>
 						<p></p>
 					</li>
-					<li>
-						<div class="faq__item-header">
+					<li class="js-accordion-item">
+						<div class="faq__item-header js-accordion-header">
 							<h6>Кто может стать контрактником?</h6>
 							<img src="./image/faq/accordeon-arrow.svg" alt="" class="faq__arrow">
 						</div>
 						<p></p>
 					</li>
-					<li>
-						<div class="faq__item-header">
+					<li class="js-accordion-item">
+						<div class="faq__item-header js-accordion-header">
 							<h6>Каким должен быть уровень физической подготовки контрактника?</h6>
 							<img src="./image/faq/accordeon-arrow.svg" alt="" class="faq__arrow">
 						</div>
 						<p></p>
 					</li>
-					<li>
-						<div class="faq__item-header">
+					<li class="js-accordion-item">
+						<div class="faq__item-header js-accordion-header">
 							<h6>Какие документы нужно предоставить при поступлении на службу по контракту?</h6>
 							<img src="./image/faq/accordeon-arrow.svg" alt="" class="faq__arrow">
 						</div>
 						<p></p>
 					</li>
-					<li>
-						<div class="faq__item-header">
+					<li class="js-accordion-item">
+						<div class="faq__item-header js-accordion-header">
 							<h6>В каком соотношении служба по контракту учитывается в страховом стаже?</h6>
 							<img src="./image/faq/accordeon-arrow.svg" alt="" class="faq__arrow">
 						</div>
@@ -762,7 +762,8 @@
 		<div class="feedback-modal__content">
 			<button class="feedback-modal__close" id="close-feedback-modal" aria-label="Закрыть">
 				<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M18 6L6 18M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+					<path d="M18 6L6 18M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+						stroke-linejoin="round" />
 				</svg>
 			</button>
 			<h2 class="feedback-modal__title">Узнать условия</h2>
@@ -776,7 +777,8 @@
 					<label for="feedback-name">ФИО</label>
 					<input type="text" name="name" id="feedback-name" placeholder="Иванов Иван Иванович" required>
 				</div>
-				<button class="feedback-modal__submit btn btn--dark btn--disabled" type="submit" disabled>Отправить заявку</button>
+				<button class="feedback-modal__submit btn btn--dark btn--disabled" type="submit" disabled>Отправить
+					заявку</button>
 				<div class="feedback-modal__checkbox">
 					<input type="checkbox" name="consent" id="feedback-consent" required>
 					<label for="feedback-consent">Я даю согласие на обработку персональных данных</label>
@@ -787,8 +789,7 @@
 
 	<script src="./scripts/header.js" defer></script>
 	<script src="./scripts/burger-menu.js" defer></script>
-	<script src="./scripts/training.js" defer></script>
-	<script src="./scripts/faq.js" defer></script>
+	<script src="./scripts/accordion.js" defer></script>
 	<script src="./scripts/guarantees_tabs.js" defer></script>
 	<script src="./scripts/payments.js" defer></script>
 	<script src="./scripts/address.js" defer></script>
